Header fades into blurred + major Safari perf fix
Safari still lags like shit, but at least it doesn’t heat up the device like hell anymore

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ h1{ /* legacy, kept for old subpages */
   border-left: var(--arrow-width) solid transparent;
   border-right: var(--arrow-width) solid transparent;
   border-bottom: var(--arrow-height) solid var(--zootopia-gradient-light);
-  transition: var(--section-collapse-time);
+  transition: transform var(--section-collapse-time);
 }
 .sectionHead:after{
   --width: 100%;
@@ -116,7 +116,6 @@ h1{ /* legacy, kept for old subpages */
   width: var(--width);
   top: calc(var(--width) - 30px);
   background: linear-gradient(90deg, var(--zootopia-gradient-dark), var(--zootopia-gradient-light));
-  transition: var(--sectionHead-hover-time);
 }
 .sectionHead img{
   left: 0;
@@ -126,7 +125,6 @@ h1{ /* legacy, kept for old subpages */
   margin-left: 10px;
   margin-top: 5px;
   height: 35px;
-  transition: 200ms;
 }
 .mods > .sectionHead > img:nth-child(2){
   margin-top: 0;
@@ -170,16 +168,36 @@ h1{ /* legacy, kept for old subpages */
   display:flex;
   justify-content: center;
   flex-wrap:wrap;
-  background:url('img/header.jpg');
-  background-position:center;
-  background-size:cover;
   -webkit-clip-path: var(--clip-path);
   clip-path: var(--clip-path);
 
   animation-name: showHeader;
   animation-duration: 1s;
+  animation-delay: 0.5s;
   animation-fill-mode: backwards;
 
+  }
+  .header:before, .header:after{
+    position: absolute;
+    content: '';
+    left: -7px;
+    top: -7px;
+    width: calc(100% + 14px);
+    height: calc(100% + 14px);
+    background:url('img/header.jpg');
+    background-position:center;
+    background-size:cover;
+  }
+  .header:before{
+    z-index: -1;
+    animation-name: changeHeaderBackground;
+    animation-duration: 1s;
+    animation-delay: 1s;
+    animation-fill-mode: both;
+  }
+  .header:after{
+    z-index: -2;
+    filter: blur(7px);
   }
   .header-removeClip{
     --clip-path: none !important;
@@ -200,7 +218,7 @@ h1{ /* legacy, kept for old subpages */
 
   animation-name: showLogo;
   animation-duration: 1s;
-  animation-delay: 0.5s;
+  animation-delay: 1s;
   animation-fill-mode: backwards;
 }
 .cflogo{
@@ -238,7 +256,7 @@ h1{ /* legacy, kept for old subpages */
 
   animation-name: showHeaderLink;
   animation-duration: 1s;
-  animation-delay: 1.8s;
+  animation-delay: 2.3s;
   animation-fill-mode: backwards;
 }
 .header-link:hover{
@@ -281,7 +299,7 @@ h1{ /* legacy, kept for old subpages */
 
   animation-name: fadeIn;
   animation-duration: 1s;
-  animation-delay: 1.6s;
+  animation-delay: 2.1s;
   animation-fill-mode: backwards;
 }
 .scroll-indicator:active{
@@ -295,7 +313,7 @@ h1{ /* legacy, kept for old subpages */
   --arrow-height: 18px;
 
   display: none;
-  background: linear-gradient(var(--zootopia-gradient-light), var(--zootopia-gradient-dark));
+  background: rgba(114, 200, 119, 1);
 
   border-left: var(--arrow-width) solid transparent;
   border-right: var(--arrow-width) solid transparent;
@@ -400,7 +418,6 @@ h1{ /* legacy, kept for old subpages */
 
   animation-name: showInfoParagraph;
   animation-duration: 1s;
-  animation-delay: 0.85s;
   animation-fill-mode: backwards;
 }
 .info article p:first-child{
@@ -411,16 +428,16 @@ h1{ /* legacy, kept for old subpages */
   background-clip: text;
   -webkit-text-fill-color: transparent;
 
-  animation-delay: 0.85s;
+  animation-delay: 1.35s;
 }
 .info article p:not(:first-child){
   text-align: justify;
 }
 .info article p:nth-child(2){
-  animation-delay: 1.1s;
+  animation-delay: 1.6s;
 }
 .info article p:nth-child(3){
-  animation-delay: 1.35s;
+  animation-delay: 1.85s;
 }
 
 /* rules */
@@ -428,7 +445,7 @@ h1{ /* legacy, kept for old subpages */
 .rules{
   animation-name: fadeIn;
   animation-duration: 1s;
-  animation-delay: 1.6s;
+  animation-delay: 2.1s;
   animation-fill-mode: backwards;
 }
 
@@ -706,10 +723,6 @@ h1{ /* legacy, kept for old subpages */
 .grey{background:rgba(46,49,54,1)}
 .green{background:rgba(63,73,69,1)}
 
-@supports (backdrop-filter: blur(20px)) or (-webkit-backdrop-filter: blur(20px)) {
-  .grey{background:rgba(46,49,54,0.75)}
-  .green{background:rgba(63,73,69,0.75)}
-}
 .blur{
   filter:blur(20px) !important;
   -webkit-user-select: none;
@@ -718,12 +731,6 @@ h1{ /* legacy, kept for old subpages */
   user-select: none;
 }
 .blur a, .blur .sectionHead, .blur .channel{pointer-events: none}
-.backBlur{
-  --backdrop-filter: blur(7.5px);
-
-  -webkit-backdrop-filter: var(--backdrop-filter);
-  backdrop-filter: var(--backdrop-filter);
-}
 .command{
   padding: 0 2px;
   color: rgba(255, 255, 255, 0.8);
@@ -741,6 +748,16 @@ h1{ /* legacy, kept for old subpages */
   100%{
     transform: translate(0, 0);
     filter: opacity(100%);
+  }
+}
+
+@keyframes changeHeaderBackground{
+  0%{
+    filter: opacity(100%);
+  }
+  100%{
+    filter: opacity(0%);
+    display: none;
   }
 }
 
